objects/SalesSolution__c.object
<CustomObject>
    <description>Solution is a custom object used to record and manage the predefined Solution sets that are used in Account Planning. Solutions can be linked to the Product object, but are not required.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Designates if this Solution value can be linked to an Account Plan.</description>
        <inlineHelpText>Designates if this Solution value can be linked to an Account Plan.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CatchAll__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if this Solution value is used in the “OTHER” function as a catch all of non-specified Account Solution. There can only be one CatchAll record.</description>
        <inlineHelpText>Designates if this Solution value is used in the “OTHER” function as a catch all of non-specified Account Solution. There can only be one CatchAll record.</inlineHelpText>
        <label>CatchAll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A detailed description of the standard Solution record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A detailed description of the standard Solution record.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Suggestions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Suggestions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Solution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Solutions</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Solutions_Active</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Solutions (Active)</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Solution</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>